--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,8 @@ jobs:
         run: |
           git remote add upstream https://github.com/insin/control-panel-for-twitter.git
           git fetch upstream
-          git checkout main
-          git merge upstream/main || echo "No upstream changes"
+          git checkout master
+          git merge upstream/master || echo "No upstream changes"
 
       - name: Check if script.js changed
         id: check
@@ -31,11 +31,11 @@ jobs:
         if: steps.check.outputs.changed == 'true'
         run: |
           cp script.js userscript.user.js
-          sed -i '/==UserScript==/a\// @updateURL   https://raw.githubusercontent.com/${{ github.repository }}/main/userscript.user.js\n// @downloadURL https://raw.githubusercontent.com/${{ github.repository }}/main/userscript.user.js' userscript.user.js
+          sed -i '/==UserScript==/a\// @updateURL   https://raw.githubusercontent.com/${{ github.repository }}/master/userscript.user.js\n// @downloadURL https://raw.githubusercontent.com/${{ github.repository }}/master/userscript.user.js' userscript.user.js
 
       - name: Notify Telegram
         if: steps.check.outputs.changed == 'true'
         run: |
           curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
             -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
-            -d text="🚀 Userscript updated:\nhttps://raw.githubusercontent.com/${{ github.repository }}/main/userscript.user.js"
+            -d text="🚀 Userscript updated:\nhttps://raw.githubusercontent.com/${{ github.repository }}/master/userscript.user.js"
